# zendesk-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.cloudrun  pyproject.toml
docs/plans/: 2026-03-13-google-oauth-plan.md
docs/specs/: 2026-03-13-google-oauth-design.md
src/zendesk_mcp_server/: __init__.py  auth.py  server.py  zendesk_client.py
src/zendesk_mcp_server/tools/: __init__.py  activity.py  metrics.py  search.py  tickets.py  users.py  views.py
tests/: test_auth.py  test_retry.py  test_tools_activity.py  test_tools_metrics.py  test_tools_search.py  test_tools_tickets.py  test_tools_users.py  test_tools_views.py
