[project]
name = "zendesk-mcp-server"
version = "0.1.0"
description = "A simple Zendesk MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.23.0",
    "python-dotenv>=1.0.1",
    "zenpy>=2.0.56",
]

[tool.uv]
constraint-dependencies = [
    "h11>=0.16.0",
    "urllib3>=2.6.3",
    "starlette>=0.49.1",
    "requests>=2.32.4",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
zendesk = "zendesk_mcp_server:main"
zendesk-http = "zendesk_mcp_server:main_http"
